// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContentHeader should render loggedIn user header 1`] = `
<div
  class="jsx-4290801200 header"
  id="SmartFAQ_header"
>
  <div
    class="jsx-4290801200 HeaderFAQ"
  >
    <div
      class="jsx-4290801200 closeButton"
    >
      <div
        class="jsx-477917638 close-icon"
        role="button"
        tabindex="-1"
      >
        <svg
          fill="currentColor"
          height="24px"
          preserveAspectRatio="xMidYMid meet"
          style="vertical-align:middle;color:#46515e"
          viewBox="0 0 24 24"
          width="24px"
        >
          <path
            d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
          />
        </svg>
      </div>
    </div>
    <div
      class="jsx-3005146671 jsx-2367066345 loggedIn"
    >
      <div
        class="jsx-3005146671 jsx-2367066345 helpHeader"
      >
        Help
      </div>
      <div
        class="jsx-3005146671 jsx-2367066345 desktopOnly"
      >
        <div
          class="jsx-3005146671 jsx-2367066345 staticFaqSearch"
        >
          <div
            class="jsx-3971362595 wrapper"
          >
            <input
              class="jsx-3971362595"
              data-cy="input-staticFAQ"
              placeholder="Search"
              value=""
            />
            <div
              class="jsx-3971362595 inputIcon"
            >
              <svg
                fill="currentColor"
                height="24px"
                preserveAspectRatio="xMidYMid meet"
                style="vertical-align:middle;color:#bac7d5"
                viewBox="0 0 24 24"
                width="24px"
              >
                <path
                  d="M15.5 14h-.79l-.28-.27A6.471 6.471 0 0 0 16 9.5 6.5 6.5 0 1 0 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
      <div
        class="jsx-3005146671 jsx-2367066345 links"
      >
        <div
          class="jsx-3005146671 jsx-2367066345 desktopOnly"
        >
          <div
            class="jsx-1683419278 signOut"
            role="button"
            tabindex="0"
          >
            <p
              class="Text__StyledText-inVtPV dVuICh"
            >
              Sign out
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ContentHeader should render loggedOut user header 1`] = `
<div
  class="jsx-4290801200 header"
  id="SmartFAQ_header"
>
  <div
    class="jsx-4290801200 HeaderFAQ"
  >
    <div
      class="jsx-4290801200 closeButton"
    >
      <div
        class="jsx-477917638 close-icon"
        role="button"
        tabindex="-1"
      >
        <svg
          fill="currentColor"
          height="24px"
          preserveAspectRatio="xMidYMid meet"
          style="vertical-align:middle;color:#46515e"
          viewBox="0 0 24 24"
          width="24px"
        >
          <path
            d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
          />
        </svg>
      </div>
    </div>
    <div
      class="jsx-2367066345 jsx-1604692328 loggedOut"
    >
      <div
        class="jsx-2367066345 jsx-1604692328 signInOrBack"
      >
        <div
          class="jsx-2367066345 jsx-1604692328 backButton"
        >
          <div
            class="jsx-1190988628 back"
            data-cy="back-button"
            role="button"
            tabindex="-1"
          >
            <div
              class="jsx-1190988628 chevron"
            >
              <svg
                fill="currentColor"
                height="16px"
                preserveAspectRatio="xMidYMid meet"
                style="vertical-align:middle;color:#8291a6"
                viewBox="0 0 24 24"
                width="16px"
              >
                <path
                  d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"
                />
              </svg>
            </div>
            <span
              class="Text__StyledText-inVtPV iqjyyW"
            >
              Back
            </span>
          </div>
        </div>
      </div>
      <p
        class="jsx-2367066345 jsx-1604692328 helpHeader"
      >
        Help
      </p>
    </div>
  </div>
</div>
`;
